# pods

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  data.h  memcpy.cpp  memcpy_data.h  msgpack_data.h  msgpuck.c  msgpuck_bench.cpp  orig_msgpuck.c  pods_msgpack.cpp
ci/appveyor/: set-env.bat
ci/travis/: after_success-linux.sh  before_install-linux.sh  install-linux.sh  install-osx.sh
examples/: CMakeLists.txt  binary.cpp  json.cpp  msgpack.cpp  simple.cpp  streams.cpp  use_buffer.cpp
include/serialization++/: binary_serializer.h  errors.h  memory_storage.h  name_value.h  serialization++.h  types.h
include/serialization++/details/: memory_managers.h
include/serializationpp/: fast_binary_serializator.h  memory_storage.h  serializationpp.h  types.h
include/serializationpp/details/: memory_managers.h
tests/: CMakeLists.txt  data.h  serialization_tests.h  stl_data.h  stl_map_data.h  storage_data.cpp  storage_data.h  test_array.cpp  test_base64.cpp  test_binary.cpp  test_binary_serializer.cpp  test_binary_versioning.cpp  test_bool.cpp  test_buffer.cpp  test_endianness.cpp  test_fixed_memory_storage.cpp  test_float.cpp  test_int.cpp  test_json_serializer.cpp  test_json_versioning.cpp  test_map.cpp  test_memory_managers.cpp  test_msgpack_serializer.cpp  test_msgpack_versioning.cpp  test_rapidjson_wrapper.cpp  test_resizeable_buffer.cpp  test_resizeable_memory_storage.cpp  test_sax_handler.cpp  test_sax_handlers.cpp  test_stl_array.cpp  test_stl_deque.cpp  test_stl_forward_list.cpp  test_stl_list.cpp  test_stl_map.cpp  test_stl_map_serialization.cpp  test_stl_serialization.cpp  test_stl_vector.cpp  test_stream.cpp  test_stream_storage.cpp  test_string.cpp  (+4 more)
